@@ -1,8 +1,10 @@
+/**@constructor*/
 function ChainNode(object, link) {
 	this.value = object;
 	this.link = link; // describes this node's relationship to the previous node
 }
 
+/**@constructor*/
 function Chain(valueLinks) {
 	this.nodes = [];
 	this.cursor = -1;
